--- a/boselecta/assets/css/core.css
+++ b/boselecta/assets/css/core.css
@@ -143,6 +143,21 @@ section,
 /*//////////////////////////////////////////////////*/
 body{
     transition: background 0.8s ease;
+    position: relative;
+}
+body:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('your-image-url.jpg'); /* Replace with your image URL */
+    background-size: cover;
+    background-position: center;
+    filter: blur(8px); /* Apply blur effect */
+    opacity: 0.4; /* Fade the background image */
+    z-index: -1; /* Keep it behind the content */
 }
 #intro{
     opacity: 0;
@@ -167,20 +182,69 @@ body{
     display: block;
     text-align: center;
 }
-
+.heading h2,
+.casestudy .content{
+    position: relative;
+}
+.casestudy .content:after{
+    content: '';
+    width: 4rem;
+    height: 2px;
+    position: absolute;
+    margin-left: -2rem;
+    bottom: -2rem;
+    left: 50%;
+}
+.heading h2:before, 
+.heading h2:after {
+    content: "";
+    position: absolute;
+    width: 30%;
+    height: 1px;
+    top: 50%;
+}
+.heading h2::before {
+    left: 0;
+}
+.heading h2::after {
+    right: 0;
+}
+/*//////////////////////////////////////////////////*/
+/* JOURNAL */
+/*//////////////////////////////////////////////////*/
+#journal .heading h2:before, 
+#journal .heading h2:after {
+width: 25%;
+}
 #journal .flex{
     flex-wrap: nowrap;
+    overflow-y: hidden;
     overflow-x: auto; /* Enables horizontal scrolling */
     gap: 20px; /* Space between the items (optional) */
     padding: 10px; /* Optional, for padding around the scroll container */
-}
-      
+}  
 #journal .flex .col{
         flex: auto;
         flex-shrink: 0; /* Prevents the items from shrinking */
         max-width: 32%; /* Each item has a width of 340px */
       }
-
+/*//////////////////////////////////////////////////*/
+/* SHOWCASE */
+/*//////////////////////////////////////////////////*/
 #showcase .img{
     aspect-ratio: 2/0.6;
+}
+
+#journal .flex::-webkit-scrollbar {
+    width: 2px; /* Adjust the width of the scrollbar */
+    height: 2px; /* Adjust the height for horizontal scrollbar */
+  }
+  
+  #journal .flex::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.24); /* White color with 40% opacity */
+    border-radius: 2px; /* Optional: rounded corners */
+}
+  
+#journal .flex::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.1); /* Optional: background color for the track */
 }
