--- a/boselecta/assets/css/styles.css
+++ b/boselecta/assets/css/styles.css
@@ -7,7 +7,7 @@
     --background-color: #315D68;
     --text-color: #444;
     --light-text-color: #666;
-    --invert-text-color: #FFF;
+    --invert-text-color: #E6E0D0;
     /* Dark Mode */
     /*--primary-color: #88A4AA;
     --secondary-color: #000;
@@ -32,11 +32,20 @@ a{
 .page-index a{
     color: var(--invert-text-color);
 }
+h2,
+.casestudy,
+.casestudy a{
+    color: #ECECE4;
+}
 /*/////////////////////////*/
 @media (max-width: 1024px) {
 
 }
 /*/////////////////////////*/
+.casestudy .content p,
+.heading p{
+    opacity: 68%;  
+}
 #intro .button,
 #intro p{
     opacity: 24%;
@@ -66,7 +75,7 @@ a{
 }
 /*/////////////////////////*/
 .button.outline{
-    border-width: 1px;
+    border-width: 1.25px;
 }
 header .language a{
     border-width: 0 0 1px 0;
@@ -74,6 +83,9 @@ header .language a{
 /*/////////////////////////*/
 .button.outline{
     border-color: var(--text-color);
+}
+{
+    border-color: #89A6AE;
 }
 .page-index .button.outline,
 footer .button.outline{
@@ -92,16 +104,13 @@ header .language a:hover,
 .img{
     background-color: var(--secondary-color);
 }
-.page-index .img{
-    background-color: rgba(0, 0, 0, 0.24);
-}
 .brand h1,
 header .language.active a,
 .button{
     background-color: var(--accent-color);
 }
-.page-index .bg-intro,
-.page-index .bg-intro a,
+.bg-intro,
+.bg-intro a,
 header .language a{
     background-color: var(--background-color);
 }
@@ -110,52 +119,28 @@ footer,
 .brand small{
     background-color: #FFF;
 }
-.splash{
-    background: linear-gradient(to right, #F1F1F3 0%, #E6E6EA 50%);
-}
-
-body{
-    position: relative;
-}
-body:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('your-image-url.jpg'); /* Replace with your image URL */
-    background-size: cover;
-    background-position: center;
-    filter: blur(8px); /* Apply blur effect */
-    opacity: 0.4; /* Fade the background image */
-    z-index: -1; /* Keep it behind the content */
-}
 .page-index .bg-intro{
     background-color: var(--background-color);
-    color: #FFF;
+    color: #E6E0D0;
 }
 .bg-journal{
-    background-color: #191919;
+    background-color: #29444C;
 }
 .bg-showcase{
-    background-color: #2E2E2E;
+    background-color: #191919;
 }
-body,
-.bg-intro,
-.bg-casestudy1,
-.bg-casestudy2,
-.bg-casestudy3{
+body{
     background-color: #21282D;
-    color: #FFF;
 }
-/*.bg-casestudy-au{
-    background: radial-gradient(circle, rgba(235, 85, 5, 0.4) 20%, rgba(0, 58, 126, 0.2) 80%);
-    background: radial-gradient(circle, rgba(235, 85, 5, 0.7) 20%, rgba(0, 58, 126, 0.8) 80%);
-}*/
-.bg-casestudy-adventure{
-    background-color: #111;
-    color: #FFF;
+/*/////////////////////////*/
+.button.outline{
+    background-color: transparent!important;
+}
+/*//////////////////////////////////////////////////*/
+/* GRADIENTS */
+/*//////////////////////////////////////////////////*/
+.splash{
+    background: linear-gradient(to right, #F1F1F3 0%, #E6E6EA 50%);
 }
 .bg-casestudy-pulse{
     background: linear-gradient(to right, 
@@ -166,9 +151,16 @@ body,
     );
     color: #FFF;
 }
-/*/////////////////////////*/
-.button.outline{
-    background-color: transparent!important;
+/*//////////////////////////////////////////////////*/
+/* OPACITIES */
+/*//////////////////////////////////////////////////*/
+.casestudy .content:after,
+.heading h2:before, 
+.heading h2:after {
+    background-color: rgba(255, 255, 255, 0.24);
+}
+.page-index .img{
+    background-color: rgba(0, 0, 0, 0.24);
 }
 /*//////////////////////////////////////////////////*/
 /* BORDER RADIUS */
@@ -200,6 +192,12 @@ section{
     padding-top: 8rem;
     padding-bottom: 4rem;
 }
+#showcase{
+    padding-top: 4rem;
+}
+#journal .flex{
+    padding-bottom: 4rem;
+}
 footer{
     padding-top: 4rem;
     padding-bottom: 8rem;
@@ -209,6 +207,9 @@ header,
 .container{
     padding-left: 2rem; 
     padding-right: 2rem;
+}
+.heading{
+    padding-bottom: 2rem;
 }
 #benefits .col{
     padding: 1.5rem;
@@ -256,7 +257,7 @@ p{
 }
 .heading h2,
 .heading h3{
-    margin-bottom: 0.25rem;
+    margin-bottom: 0.75rem;
 }
 .brand h1,
 .brand p,
@@ -302,6 +303,7 @@ body {
     font-weight: bold;
 }
 /*/////////////////////////*/
+.casestudy p,
 .heading,
 #benefits{
     text-align: center;
@@ -349,10 +351,10 @@ h2{
     font-size: 3rem;    
 }
 h3{
-    font-size: 2.25rem;
+    font-size: 2rem;
 }
 h4{
-    font-size: 1.5rem;
+    font-size: 1.15rem;
 }
 #intro p{
     font-size: 1.5rem;
@@ -388,9 +390,6 @@ small{
     aspect-ratio: 16/9;
 }
 #journal .img{
-    aspect-ratio: 3/4;
-}
-#casestudy-block1 .img{
     aspect-ratio: 1/1;
 }
 /*/////////////////////////*/
